[package]
name = "rosu-renderer"
version = "1.1.1"
edition = "2021"
description = "A library to render osu! beatmaps in egui"
license = "MIT"
repository = "https://github.com/Glubus/rosu-renderer"
authors = ["Glubus"]
keywords = ["osu", "game", "beatmap", "egui"]
categories = ["games", "egui"]

[dependencies]
eframe = "0.32.0"
egui = "0.32.0"
egui_extras = { version = "0.32.0", features = ["image", "file"] }
rosu-map = "0.2.1"
image = { version = "0.25", features = ["jpeg", "png"] }


[dev-dependencies]
eframe = "0.32.0"
rfd = "0.15.3"

[[example]]
name = "mania"
path = "examples/mania.rs"
